<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!-- Copyright (C) 2010 Brion Noble Emde

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">BPTracker Free</string>
    <string name="bp_permission_description">Read and write access to your blood pressure data.</string>
    <string name="bp_permission_label">personal medical data</string>
    <!-- Miscellaneous string for localization -->
    <string name="empty">No BP Records: Click Here to Start.</string>
    <!-- These are Window titles -->
    <string name="title_list">BP History</string>
    <string name="title_provider">BP Provider</string>
    <string name="title_edit">Edit Readings</string>
    <string name="title_create">Add New Reading</string>
    <!-- These strings appear in the BPRecordEditor fragments -->
    <string name="menu_done">Done</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_delete">Delete</string>
    <string name="label_systolic">Systolic</string>
    <string name="label_diastolic">Diastolic</string>
    <string name="label_pulse">Pulse</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_sys_spinner">Pick Systolic Value</string>
    <string name="label_dia_spinner">Pick Diastolic Value</string>
    <string name="label_note">Note</string>
    <string name="label_pls_spinner">Pick Pulse Value</string>
    <string name="msg_future_date">Future date!</string>
    <string name="hint_note_entry">Write something here</string>
    <!-- These values are for the BPRecordList fragment -->
    <string name="menu_edit">Edit</string>
    <string name="menu_send">@string/label_send</string>
    <string name="list_label_date">Date:</string>
    <string name="list_label_time">Time:</string>
    <string name="list_label_bp">Sys/Dia:</string>
    <string name="list_label_pulse">Pulse:</string>
    <string name="msg_add">Click to Add</string>
    <string name="bp_separator">/</string>
    <string name="menu_new">New</string>
    <string name="msg_loading">Loading&#8230;</string>
    <!-- These strings are used on the BPSend Activity layout -->
    <string name="title_send">@string/label_send</string>
    <string name="label_send">Send</string>
    <string name="label_text">As Text</string>
    <string name="label_attach">As Attachment</string>
    <string name="label_send_how">How to send?</string>
    <string name="label_message_format">Message Text (%1$d bytes)</string>
    <string name="msg_nothing_to_send">Nothing to send!</string>
    <string name="msg_choose_send_method">Send to where?</string>
    <string name="msg_file_not_found_error">Error: File not found. Your data is safe.</string>
    <string name="msg_io_exception_error">Error: I/O Exception. Your data is safe.</string>
    <string name="msg_directory_error">Error: Storage space. Your data is safe.</string>
    <string name="msg_null_file_error">Error: Null file reference. Your data is safe.</string>
    <string name="msg_no_file_error">Error: Non-existent file. Your data is safe.</string>
    <string name="msg_zero_size_error">Error: Zero file size. Your data is safe.</string>
    <string name="msg_twilight_zone">We have briefly entered the Twilight Zone. Your data is safe.</string>
    <!-- These are the column names for the BPSend Activity, so we can send localized names -->
    <string name="bp_send_date">@string/label_date</string>
    <string name="bp_send_time">@string/label_time</string>
    <string name="bp_send_sys">@string/label_systolic</string>
    <string name="bp_send_dia">@string/label_diastolic</string>
    <string name="bp_send_pls">@string/label_pulse</string>
    <string name="bp_send_note">@string/label_note</string>
    <!-- This is a plain old Java format string - default is Date Time -->
    <string name="datetime_format">%1$s %2$s</string>
    <!-- These strings appear exclusively in the BPRecordEditorText activity -->
    <string name="sys_not_empty">Systolic field cannot be empty.</string>
    <string name="sys_range_error">Systolic value must be between %1$d and %2$d.</string>
    <string name="dia_not_empty">Diastolic field cannot be empty.</string>
    <string name="dia_range_error">Diastolic value must be between %1$d and %2$d.</string>
    <string name="pls_not_empty">Pulse field cannot be empty.</string>
    <string name="pls_range_error">Pulse value must be between %1$d and %2$d.</string>
    <string name="title_alternate_edit">Alternate Readings Editor</string>
    <!-- These strings appear in the data management activity -->
    <string name="menu_data">Data</string>
    <string name="label_delete_history">Delete History</string>
    <string name="msg_delete">Deletion of Historical Data is permanent!</string>
    <string name="msg_deleted">Deleted %s records</string>
    <!-- *********************************************************************** -->
    <!-- ******************VERSION_CODE 9 (v1.2.8) NEW STRINGS****************** -->
    <string name="menu_settings">Settings</string>
    <string name="default_values">Defaults</string>
    <string name="average_values">Average Readings</string>
    <string name="fixed_chosen">New records will use the fixed settings.</string>
    <string name="average_chosen">New records will use the average of previous readings, when possible.</string>
    <string name="systolic_initial_format">Initial Systolic: (%1$s)</string>
    <string name="diastolic_initial_format">Initial Diastolic: (%1$s)</string>
    <string name="pulse_initial_format">Initial Pulse: (%1$s)</string>
    <string name="icon_content_description">Icon</string>
    <string name="check_values">Please check your readings for accuracy.</string>
    <!-- New  VERSION_CODE (v1.3.5)-->
    <string name="editor_selection_title">Editor selection</string>
    <string name="spinner_based_editor">Using spinner-based editor</string>
    <string name="text_based_editor">Using keyboard-based editor</string>
    <string name="editor_switch_off">Spinner</string>
    <string name="editor_switch_on">Keyboard</string>
    <string name="now">Now</string>
    <string name="forever">Forever</string>
    <string name="editor_lock_title">Editor Lock</string>
    <string name="editor_unlocked_summary">Ask Me</string>
    <string name="editor_locked_summary">Do not ask me</string>
    <string name="editor_lock_on">Locked</string>
    <string name="editor_lock_off">Open</string>
    <string-array name="send_columns">
        <item>@string/bp_send_date</item>
        <item>@string/bp_send_time</item>
        <item>@string/bp_send_sys</item>
        <item>@string/bp_send_dia</item>
        <item>@string/bp_send_pls</item>
        <item>@string/bp_send_note</item>
    </string-array>
</resources>
