<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
>
	<TableLayout
		android:id="@+id/button_layout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:stretchColumns="0,1"
		android:shrinkColumns="0,1"
	>
		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
		>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_send"
				android:id="@+id/send"
				android:layout_gravity="center_horizontal"
			/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/menu_cancel"
				android:id="@+id/cancel"
				android:layout_gravity="center_horizontal"
			/>
		</TableRow>
	</TableLayout>
	<ScrollView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_alignParentTop="true"
		android:layout_above="@id/button_layout"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:orientation="vertical">
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/label_send_how"
				style="@style/bp_label"
			/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>
				<CheckBox
					android:id="@+id/text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/label_text"
					android:layout_weight="1"
					android:checked="true"
				/>
				<CheckBox
					android:id="@+id/attach"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/label_attach"
					android:layout_weight="1"
					android:checked="true"
				/>
			</LinearLayout>
			<TextView
				android:id="@+id/message_label"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				style="@style/bp_label"
			/>
			<TextView
				android:id="@+id/message"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				style="@style/bp_text"
			/>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>