<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
>
	<TableLayout
		android:id="@+id/button_layout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:stretchColumns="0,1"
		android:shrinkColumns="0,1"
	>
		<TableRow>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/menu_done"
				android:id="@+id/done_button"
				android:layout_gravity="center_horizontal"
			/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/menu_revert"
				android:id="@+id/revert_button"
				android:layout_gravity="center_horizontal"
			/>
		</TableRow>
	</TableLayout>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/button_layout"
		android:layout_alignParentTop="true"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
		>
			<TableLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:stretchColumns="1"
				android:shrinkColumns="0,1" 
			>
				<include layout="@layout/sys_edit_text"/>
				<include layout="@layout/dia_edit_text"/>
				<include layout="@layout/pls_edit_text"/>
				<EditText
					android:id="@+id/note"
					android:layout_height="wrap_content"
				/>
				<TableRow
					android:layout_height="wrap_content"
				>
					<TextView
						android:id="@+id/date_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/label_date"
						android:layout_gravity="center_vertical|right"
						style="@style/bp_label" 
					/>
					<Button
						android:id="@+id/date_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical|left"
					/>
				</TableRow>
				<TableRow
					android:layout_height="wrap_content"
				>
					<TextView
						android:id="@+id/time_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/label_time"
						android:layout_gravity="center_vertical|right" 
						style="@style/bp_label" 
					/>
					<Button
						android:id="@+id/time_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical|left" 
					/>
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>