<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="0,1"
    android:stretchColumns="0,1"
>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
    >
        <TextView
             android:text="@string/label_systolic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
             style="@style/bp_label"
        />
        <Spinner
            android:id="@+id/systolic_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    >
        <TextView
            android:text="@string/label_diastolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            style="@style/bp_label"
        />
        <Spinner
            android:id="@+id/diastolic_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    >
        <TextView
            android:text="@string/label_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            style="@style/bp_label"
        />
        <Spinner
            android:id="@+id/pulse_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
    </TableRow>
</TableLayout>
