<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1"
    android:shrinkColumns="0,1"
>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/label_systolic"
            style="@style/bp_label"
        />
        <EditText
            android:id="@+id/systolic_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
        />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/label_diastolic"
            style="@style/bp_label"
        />
        <EditText
            android:id="@+id/diastolic_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
        />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/label_pulse"
            style="@style/bp_label"
        />
        <EditText
            android:id="@+id/pulse_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
        />
    </TableRow>
</TableLayout>
