<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Brion Noble Emde

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="0,1,2,3"
        android:stretchColumns="0,1,2,3"
    >
        <TableRow
            android:id="@+id/date_time_row"
            android:layout_height="wrap_content"
        >
            <TextView
                android:text="@string/list_label_date"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical|right"
                style="@style/bp_label"
            />
            <TextView
                android:id="@+id/date"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical|left"
                android:textIsSelectable="true"
                style="@style/bp_text"
            />
            <TextView
                android:text="@string/list_label_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical|right"
                style="@style/bp_label"
            />
            <TextView
                android:id="@+id/time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical|left"
                android:textIsSelectable="true"
                style="@style/bp_text"
            />
        </TableRow>
        <TableRow android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/list_label_bp"
                android:gravity="center_vertical|right"
                style="@style/bp_label"
            />
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            >
                <TextView
                    android:id="@+id/sys_value"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical|right"
                    android:textIsSelectable="true"
                    style="@style/bp_text"
                />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/bp_separator"
                />
                <TextView
                    android:id="@+id/dia_value"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical|left"
                    android:textIsSelectable="true"
                    style="@style/bp_text"
                />
            </TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/list_label_pulse"
                android:gravity="center_vertical|right"
                style="@style/bp_label"
            />
            <TextView
                android:id="@+id/pulse_value"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical|left"
                android:textIsSelectable="true"
                style="@style/bp_text"
            />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        style="@style/bp_text"
    />
</LinearLayout>
