<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Brion Noble Emde

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout android:id="@+id/progress_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
    >

        <ProgressBar style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/msg_loading"
            android:paddingTop="4dip"
            android:singleLine="true"
        />
    </LinearLayout>

    <ScrollView
        android:id="@+id/content_container"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
    >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_send_how"
                style="@style/bp_label"
            />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            >
                <CheckBox
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_text"
                    android:layout_weight="1"
                    android:checked="true"
                />
                <CheckBox
                    android:id="@+id/attach"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_attach"
                    android:layout_weight="1"
                    android:checked="true"
                />
            </LinearLayout>

            <TextView
                android:id="@+id/message_label"
                style="@style/bp_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textIsSelectable="false"
            />
            <TextView
                android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                style="@style/bp_text"
            />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
